Fix padding, margins & alignment in about section

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -19,6 +19,9 @@
 
 		&__stars {
 			@include sc-breakpoint(1024) {
+				display: flex;
+				flex-direction: column;
+				align-items: flex-end;
 				grid-column: 2;
 			}
 		}
@@ -85,6 +88,27 @@
 				display: flex;
 				gap: 100px;
 				text-align: center;
+				margin-bottom: 36px;
+			}
+
+			.guide {
+				&__item {
+					// display: flex;
+					// flex-direction: column;
+					// gap: 10px;
+
+					&__title {
+						margin-top: 30px;
+					}
+
+					&__link {
+						margin-top: 21px;
+					}
+
+					img {
+						height: 50px;
+					}
+				}
 			}
 		}
 
